# fink-watch

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: linter.yml
fink_watch/: LCD_1inch28.py  __init__.py  colors.py  display.py  poll.py  utils.py
lib/: LCD_1inch28.py  __init__.py  colors.py  display.py  lcdconfig.py  observatory.py  poll.py  utils.py
